tests/mm0_mmu/fail/bad-sort412.mm0
-- bad modifier order
free pure strict sort s412;